--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=development
 PORT=5000
 
-DATABASE_URL=mongodb+srv://admin-um:admin12345@cluster0.kv0q3ns.mongodb.net/first-project?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://admin-um:admin12345@cluster0.kv0q3ns.mongodb.net/ph-university?retryWrites=true&w=majority
 BCRYPT_SALT_ROUNDS=12
+DEFAULT_PASS=phuniversity!@#
